--- a/app/Views/home.html
+++ b/app/Views/home.html
@@ -32,7 +32,7 @@
         <div class="row">
           <nav class="col-9 header-menu">
             <ul class="list-inline">
-              <li class="list-inline-item active">
+              <li class="list-inline-item active1">
                 <a href="home.html">HOME</a>
               </li>
               <li class="list-inline-item">
@@ -80,26 +80,35 @@
     </div>
   </header>
   <section class="hero sea">
-    <div class="first-carousel d-flex justify-content-center align-items-center">
-      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <!-- <div class="container"> --> 
-            <div class="carousel-item active">
-              <h1>dgsdgsdhhhhhhhhhhg</h1>
-            </div>
-          <!-- </div> -->
-          <div class="carousel-item">
-            <h1>safasfasa</h1>
-          </div>
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-first carousel-item active d-flex justify-content-center align-items-center">
+          <h1>afsfasfas</h1>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+        <div class="carousel-first carousel-item d-flex justify-content-center align-items-center">
+          <h1>sfasfasfa</h1>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </section>
+  <section class="pt-100">
+    <div class="container">
+      <div class="row">
+        <div class="col-7">
+          <div class="about-1"></div>
+          <div class="about-2"></div>
+        </div>
+        <div class="col-5">
+
+        </div>
       </div>
     </div>
   </section>
