--- a/app/Views/home.html
+++ b/app/Views/home.html
@@ -80,24 +80,37 @@
     </div>
   </header>
   <section class="hero sea">
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-first carousel-item active d-flex justify-content-center align-items-center">
-          <h1>afsfasfas</h1>
-        </div>
-        <div class="carousel-first carousel-item d-flex justify-content-center align-items-center">
-          <h1>sfasfasfa</h1>
+    <div class="pt-5">
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-first carousel-item active">
+            <div class="d-flex justify-content-start align-items-center h-800">
+              <div class="carousel-text h-800 d-flex flex-column justify-content-center align-items-start">
+                <span>Welcome to Zogin</span>
+                <h2>What hurts today <br> makes you stronger <br> tomorrow</h2>
+                <a href="#" class="primary-btn">DISCOVER MORE</a>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-first carousel-item">
+            <div class="d-flex justify-content-start align-items-center h-800">
+              <div class="carousel-text h-800 d-flex flex-column justify-content-center align-items-start">
+                <span>Welcome to Zogin</span>
+                <h2>What hurts today <br> makes you stronger <br> tomorrow</h2>
+                <a href="#" class="primary-btn">DISCOVER MORE</a>
+              </div>
+            </div>
+          </div>
+          <a class="carousel-control-prev h-800" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next h-800" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
   </section>
   <section class="pt-100">
     <div class="container">
@@ -107,7 +120,6 @@
           <div class="about-2"></div>
         </div>
         <div class="col-5">
-
         </div>
       </div>
     </div>
@@ -115,5 +127,6 @@
   <script type="text/javascript" src="../../assets/js/jquery.js"></script>
   <script type="text/javascript" src="../../assets/js/bootstrap.bundle.js"></script>
 </body>
+
 
 </html>
