--- a/app/Views/home.html
+++ b/app/Views/home.html
@@ -115,15 +115,200 @@
   <section class="pt-100">
     <div class="container">
       <div class="row">
-        <div class="col-7">
-          <div class="about-1"></div>
-          <div class="about-2"></div>
+        <div class="col-7 d-flex">
+          <div class="about-1">
+            <img src="https://colorlib.com/preview/theme/zogin/img/about/about-1.jpg" alt="sun">
+          </div>
+          <div class="about-2">
+            <img class="mb-20px" src="https://colorlib.com/preview/theme/zogin/img/about/about-2.jpg" alt="">
+            <img src="https://colorlib.com/preview/theme/zogin/img/about/about-3.jpg" alt="">
+          </div>
         </div>
-        <div class="col-5">
+        <div class="col-5 welcome">
+          <div class="section-title">
+            <img src="https://colorlib.com/preview/theme/zogin/img/icon.png" alt="">
+            <h2>Welcome to Zogin</h2>
+          </div>
+          <span>“What hurts today makes you stronger tomorrow.”</span>
+          <p>We are offering internationally certified 200 Hour Yoga Teacher Training in Rishikesh and 300
+            hour yoga teacher training in Rishikesh, India - Join us to have such life-transforming
+            experience in The world capital of Yoga in Rishikesh.</p>
+          <p class="para-2">Zogin is a great place for those who are in search of the ancient practice and
+            true essence of yoga, meditation, health, peace and learning the art of creating a class to
+            teach safely. We are passionate about adjustments and mainly focus on the alignment of the
+            asanas.</p>
+          <a href="#" class="primary-btn">MORE ABOUT US</a>
         </div>
       </div>
     </div>
   </section>
+  <section class="services">
+    <div class="container text-center mb-5">
+      <img class="mb-2" src="https://colorlib.com/preview/theme/zogin/img/icon.png" alt="">
+      <h2>Enjoy All Aspects Of Yoga</h2>
+    </div>
+    <div class="row mr-0 ml-0">
+      <div class="col">
+        <div class="services-item">
+          <img src="https://colorlib.com/preview/theme/zogin/img/services/services-1.png" alt="">
+          <h5>Asana</h5>
+          <p>Grab the opportunity to deepen your own yoga practice, relax, restore and experience
+            india!</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="services-item">
+          <img src="https://colorlib.com/preview/theme/zogin/img/services/services-2.png" alt="">
+          <h5>Meditation</h5>
+          <p>Grab the opportunity to deepen your own yoga practice, relax, restore and experience
+            india!</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="services-item">
+          <img src="https://colorlib.com/preview/theme/zogin/img/services/services-3.png" alt="">
+          <h5>Mudra</h5>
+          <p>Grab the opportunity to deepen your own yoga practice, relax, restore and experience
+            india!</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="services-item">
+          <img src="https://colorlib.com/preview/theme/zogin/img/services/services-4.png" alt="">
+          <h5>Bandhas</h5>
+          <p>Grab the opportunity to deepen your own yoga practice, relax, restore and experience
+            india!</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="services-item">
+          <img src="https://colorlib.com/preview/theme/zogin/img/services/services-5.png" alt="">
+          <h5>Philosophy</h5>
+          <p>Grab the opportunity to deepen your own yoga practice, relax, restore and experience
+            india!</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="services-item">
+          <img src="https://colorlib.com/preview/theme/zogin/img/services/services-6.png" alt="">
+          <h5>Pranayama</h5>
+          <p>Grab the opportunity to deepen your own yoga practice, relax, restore and experience
+            india!</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="chooseus">
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <div class="chooseus-text">
+            <h2>Why Choose Us</h2>
+            <p>We are offering internationally certified 200 Hour Yoga Teacher Training in Rishikesh and 300
+              hour yoga teacher training in Rishikesh, India - Join us to have such life-transforming
+              experience in The world capital of Yoga in Rishikesh.</p>
+          </div>
+          <div class="d-flex">
+            <div class="chooseus-item d-flex">
+              <div class="chooseitem-img">
+                <img src="https://colorlib.com/preview/theme/zogin/img/chooseus/choose-1.png" alt="">
+              </div>
+              <div class="chooseitem-text">
+                <h2 class="choose-counter">2146</h2>
+                <p>Students</p>
+              </div>
+            </div>
+            <div class="chooseus-item d-flex">
+              <div class="chooseitem-img">
+                <img src="https://colorlib.com/preview/theme/zogin/img/chooseus/choose-2.png" alt="">
+              </div>
+              <div class="chooseitem-text">
+                <h2 class="choose-counter">15</h2>
+                <p>Years Of Experience</p>
+              </div>
+            </div>
+          </div>
+          <div class="d-flex">
+            <div class="chooseus-item d-flex">
+              <div class="chooseitem-img">
+                <img src="https://colorlib.com/preview/theme/zogin/img/chooseus/choose-3.png" alt="">
+              </div>
+              <div class="chooseitem-text">
+                <h2 class="choose-counter">48</h2>
+                <p>Branches</p>
+              </div>
+            </div>
+            <div class="chooseus-item d-flex">
+              <div class="chooseitem-img">
+                <img src="https://colorlib.com/preview/theme/zogin/img/chooseus/choose-4.png" alt="">
+              </div>
+              <div class="chooseitem-text">
+                <h2 class="choose-counter">234</h2>
+                <p>Expert Staffs</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-6">
+          <img src="https://colorlib.com/preview/theme/zogin/img/chooseus/choose-pic.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="upcoming-classes">
+    <div class="container">
+      <div class="text-center mb-5">
+        <h2>Upcoming Courses</h2>
+        <p>The trainings are multi-style and you will learn and practice Hatha Vinyasa (flow)<br> and
+          Yin Yoga.</p>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="classes-item">
+            <div class="claases-item-img">
+              <img class="w-100" src="https://colorlib.com/preview/theme/zogin/img/classes/classes-1.jpg" alt="">
+              <span>20 Jun 2019</span>
+            </div>
+            <div class="classes-item-text">
+              <p>14 Days | Start on 10th Every Month</p>
+              <h4><a class="text-decoration-none" href="#">100 Hour Yoga Course <br> Rishikesh</a></h4>
+              <h6>Jordan Lawson <span>- Yoga Teacher</span></h6>
+              <a href="#" class="class-btn text-decoration-none">JOIN NOW</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="classes-item">
+            <div class="claases-item-img">
+              <img class="w-100" src="https://colorlib.com/preview/theme/zogin/img/classes/classes-2.jpg" alt="">
+              <span>20 Jun 2019</span>
+            </div>
+            <div class="classes-item-text">
+              <p>14 Days | Start on 10th Every Month</p>
+              <h4><a class="text-decoration-none" href="#">200 Hour Yoga Course <br> Rishikesh</a></h4>
+              <h6>Jordan Lawson <span>- Yoga Teacher</span></h6>
+              <a href="#" class="class-btn text-decoration-none">JOIN NOW</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="classes-item">
+            <div class="claases-item-img">
+              <img class="w-100" src="https://colorlib.com/preview/theme/zogin/img/classes/classes-3.jpg" alt="">
+              <span>20 Jun 2019</span>
+            </div>
+            <div class="classes-item-text">
+              <p>14 Days | Start on 10th Every Month</p>
+              <h4><a class="text-decoration-none" href="#">300 Hour Yoga Course <br> Rishikesh</a></h4>
+              <h6>Jordan Lawson <span>- Yoga Teacher</span></h6>
+              <a href="#" class="class-btn text-decoration-none">JOIN NOW</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script type="text/javascript" src="../../assets/js/jquery.js"></script>
   <script type="text/javascript" src="../../assets/js/bootstrap.bundle.js"></script>
 </body>
